Fix some links to groups in "organizations" page

--- a/organizations.html
+++ b/organizations.html
@@ -51,13 +51,13 @@
               <a class="page-menu__link" href="#catalog-studying">Учебные</a>
             </li>
             <li class="page-menu__item">
-              <a class="page-menu__link" href="#catalog-community-something">Мероприятия и поддержки</a>
+              <a class="page-menu__link" href="#catalog-events-and-support">Мероприятия и поддержки</a>
             </li>
             <li class="page-menu__item">
               <a class="page-menu__link" href="#catalog-communication">Коммуникативные</a>
             </li>
             <li class="page-menu__item">
-              <a class="page-menu__link" href="#catalog-community-sport">Спортивные</a>
+              <a class="page-menu__link" href="#catalog-sport">Спортивные</a>
             </li>
             <li class="page-menu__item">
               <a class="page-menu__link" href="#catalog-institute-1">Институт №1</a>
@@ -168,7 +168,7 @@
               </li>
             </ul>
           </article>
-          <article class="catalog-group" id="catalog-community-something">
+          <article class="catalog-group" id="catalog-events-and-support">
             <h3 class="catalog-group__title">Мероприятия и поддержки</h3>
             <ul class="catalog-group__list">
               <li class="catalog-group__item">
@@ -300,7 +300,7 @@
               </li>
             </ul>
           </article>
-          <article class="catalog-group" id="catalog-community-sport">
+          <article class="catalog-group" id="catalog-sport">
             <h3 class="catalog-group__title">Спортивные</h3>
             <ul class="catalog-group__list">
               <li class="catalog-group__item">
