Add short link to "dormitories" manual
Change long link to short

--- a/manuals.html
+++ b/manuals.html
@@ -48,10 +48,7 @@
         <nav class="catalog-group__content">
           <ul class="catalog-group__list">
             <li class="menu__content-item">
-              <a
-                class="card card--menu" target="_blank"
-                href="https://carbonated-mimosa-298.notion.site/54695b22f13440f3b3eda7e292744e04#52c7fecd4b6b4d62ada702976fefc3ec"
-              >
+              <a class="card card--menu" href="https://clck.ru/3PBSQ6" target="_blank">
                 <img class="card__icon" src="./icons/manuals/dormitories.svg" alt="" width="100" height="100"/>
                 <h3 class="card__title">Общежития</h2>
                 <p class="card__description">
