Fix links in "organizations" and "manuals" pages (#88)
* Add new links (#74)

* Add new link to the "organizations" page

* Add new link to the "organizations" page

* Add new link to the "organizations" page

* Add new link to the "organizations" page

* Add new link to the "services" page

* Add new link to the "organizations" page

* Update catalog content (#85)

- Rename some groups
- Add new links
- Change locations of some links

* Update name of the "sport" group in "organizations"

* Update name of the "events" group in "organizations"

* Move "chess" organization to "sport" group

* Move "Cyber League" organization to "sport" group

* Move "fire help" organization to "sport" group

* Move "science community" organization to "studying" group

* Move "workers union" organization to "events" group

* Create group "communication" in "organizations"

* Move "conversation club" organization to "communication" group

* Move "top 100" organization to "communication" group

* Move "startup studio" organization to "communication" group

* Delete "workers union" organization in "not-sorted" group

Forgot delete this organization from "not-sorted" group
during moving to "events" group

* Move "aeromai" organization to "studying" group

* Move "oblako" service to "services" page

* Move "MAI STORE" service to "services" page

* Change the order of services

* Delete "not-sorted" group

* Add "business club" organization link

* Move "spkmai" organization to "communication" group

* Move "debat club" organization to "communication" group

* Add link to main site of MAI as service

* Add link to institutes and branches of MAI as service

* Add link to "TOPS" service

* Fix some links to groups in "organizations" page

* Add short link to "dormitories" manual

Change long link to short

--- a/organizations.html
+++ b/organizations.html
@@ -51,13 +51,13 @@
               <a class="page-menu__link" href="#catalog-studying">Учебные</a>
             </li>
             <li class="page-menu__item">
-              <a class="page-menu__link" href="#catalog-community-something">Мероприятия и поддержки</a>
+              <a class="page-menu__link" href="#catalog-events-and-support">Мероприятия и поддержки</a>
             </li>
             <li class="page-menu__item">
               <a class="page-menu__link" href="#catalog-communication">Коммуникативные</a>
             </li>
             <li class="page-menu__item">
-              <a class="page-menu__link" href="#catalog-community-sport">Спортивные</a>
+              <a class="page-menu__link" href="#catalog-sport">Спортивные</a>
             </li>
             <li class="page-menu__item">
               <a class="page-menu__link" href="#catalog-institute-1">Институт №1</a>
@@ -166,34 +166,9 @@
                   </div>
                 </a>
               </li>
-              <li class="catalog-group__item">
-                <a class="card card--telegram" href="https://t.me/startupstudia" target="_blank">
-                  <div class="card__icon-wrapper">
-                    <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
-                    <span class="card__type">канал</span>
-                  </div>
-                  <div class="card__text-wrapper">
-                    <h4 class="card__title">Стартап-экосистема</h4>
-                  </div>
-                </a>
-              </li>
-              <li class="catalog-group__item">
-                <a class="card card--telegram" href="https://t.me/nauka_mai" target="_blank">
-                  <div class="card__icon-wrapper">
-                    <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
-                    <span class="card__type">канал</span>
-                  </div>
-                  <div class="card__text-wrapper">
-                    <h4 class="card__title">Наука [НИРС, СНО, аспиранты]</h4>
-                    <span class="card__description">
-                      Отдел сопровождения и развития научной деятельности обучающихся и Студенческого научного общества
-                    </span>
-                  </div>
-                </a>
-              </li>
             </ul>
           </article>
-          <article class="catalog-group" id="catalog-community-something">
+          <article class="catalog-group" id="catalog-events-and-support">
             <h3 class="catalog-group__title">Мероприятия и поддержки</h3>
             <ul class="catalog-group__list">
               <li class="catalog-group__item">
@@ -337,7 +312,7 @@
               </li>
             </ul>
           </article>
-          <article class="catalog-group" id="catalog-community-sport">
+          <article class="catalog-group" id="catalog-sport">
             <h3 class="catalog-group__title">Спортивные</h3>
             <ul class="catalog-group__list">
               <li class="catalog-group__item">
