Update content in "organizations" manual

--- a/manuals/organizations.html
+++ b/manuals/organizations.html
@@ -75,7 +75,7 @@
               </tr>
               <tr>
                 <td>Волонтёрский центр</td>
-                <td>ГУК А-219 (слева от MAI STORE)</td>
+                <td>ГУК А-219 <i>(слева от MAI STORE)</i></td>
                 <td>
                   <a class="link" href="https://mai.ru/campus/360/ump/volunteer" target="_blank">
                     Подробно
@@ -87,9 +87,14 @@
                 <td>ГУК А-607</td>
                 <td>
                   <ul>
-                    <li><b>Оформление документов:</b> справка с места учёбы, платное обучение, обновление индивидуальных данных, заверение документов</li>
-                    <li><b>Оформление выплат:</b> социальная стипендия, повышенная, материальная поддержка</li>
-                    <li><b>Помощь в решении других вопросов:</b> утеря пропуска, продление сессии, консультация по личным проблемам</li>
+                    <li>Оформление справки с места учёбы</li>
+                    <li>Решение вопросов по платному обучению</li>
+                    <li>Обновление индивидуальных данных</li>
+                    <li>Заверение документов</li>
+                    <li>Обработка заявлений на оформление социальной и повышенной стипендий, большой материальной помощи</li>
+                    <li>Оформление заявки на получение пропуска в связи с его утерей</li>
+                    <li>Продление сессии</li>
+                    <li>Консультация по личным проблемам</li>
                   </ul>
                 </td>
               </tr>
@@ -114,12 +119,18 @@
               <tr>
                 <td>Военно-учётный стол</td>
                 <td>улица Дубосековская, дом 5, комната 203</td>
-                <td>Оформление справки об отсрочке</td>
+                <td>Оформление справки об отсрочке от призыва в армию</td>
               </tr>
               <tr>
                 <td>Учебный отдел Института №8</td>
                 <td>ГУК А-613</td>
-                <td>—</td>
+                <td>
+                  <ul>
+                    <li>Оформление справки об обучении</li>
+                    <li>Формирование ведомостей на все экзамены и зачеты, внесение оценок в личный кабинет</li>
+                  </ul>
+
+ </td>
               </tr>
               <tr>
                 <td>НИО-8</td>
