Add special class for hidden text link in footer

--- a/manuals/money.html
+++ b/manuals/money.html
@@ -246,7 +246,7 @@
       </section>
       <p class="warning">
         Сервис не является официальным ресурсом 
-        <a class="link" href="https://mai.ru" target="_blank">Московского авиационного института</a>
+        <a class="link link--hidden" href="https://mai.ru" target="_blank">Московского авиационного института</a>
         и имеет ознакомительный характер.
       </p>
     </footer>
