--- a/manuals/money.html
+++ b/manuals/money.html
@@ -51,7 +51,7 @@
           </div>
           <div class="manual-about__element">
             <img class="manual-about__icon" src="../icons/manuals_about/author.svg" alt="Автор" width="20" height="20"/>
-            <span class="manual-about__text">iannsgirdye<a class="link" href="https://t.me/iannsgirdye"></a></span>
+            <span class="manual-about__text"><a class="link link--hidden" href="https://t.me/iannsgirdye">iannsgirdye</a></span>
           </div>
         </div>
         <article class="manual-part">
