Fix styles of text links and links to authors in manuals (#91)
* Add styles for modified variant of text links

* Add special class for hidden text link in footer

* Fix link to author in manual subpages

--- a/manuals/exits.html
+++ b/manuals/exits.html
@@ -51,7 +51,7 @@
           </div>
           <div class="manual-about__element">
             <img class="manual-about__icon" src="../icons/manuals_about/author.svg" alt="Автор" width="20" height="20"/>
-            <span class="manual-about__text">iannsgirdye<a class="link" href="https://t.me/iannsgirdye"></a></span>
+            <span class="manual-about__text"><a class="link link--hidden" href="https://t.me/iannsgirdye">iannsgirdye</a></span>
           </div>
         </div>
         <article class="manual-part">
@@ -148,7 +148,7 @@
       </section>
       <p class="warning">
         Сервис не является официальным ресурсом 
-        <a class="link" href="https://mai.ru" target="_blank">Московского авиационного института</a>
+        <a class="link link--hidden" href="https://mai.ru" target="_blank">Московского авиационного института</a>
         и имеет ознакомительный характер.
       </p>
     </footer>
