--- a/manuals/organizations.html
+++ b/manuals/organizations.html
@@ -51,7 +51,7 @@
           </div>
           <div class="manual-about__element">
             <img class="manual-about__icon" src="../icons/manuals_about/author.svg" alt="Автор" width="20" height="20"/>
-            <span class="manual-about__text">iannsgirdye<a class="link" href="https://t.me/iannsgirdye"></a></span>
+            <span class="manual-about__text"><a class="link link--hidden" href="https://t.me/iannsgirdye">iannsgirdye</a></span>
           </div>
         </div>
         <div class="table-wrapper">
@@ -210,7 +210,7 @@
       </section>
       <p class="warning">
         Сервис не является официальным ресурсом 
-        <a class="link" href="https://mai.ru" target="_blank">Московского авиационного института</a>
+        <a class="link link--hidden" href="https://mai.ru" target="_blank">Московского авиационного института</a>
         и имеет ознакомительный характер.
       </p>
     </footer>
