--- a/manuals/organizations.html
+++ b/manuals/organizations.html
@@ -51,7 +51,9 @@
           </div>
           <div class="manual-about__element">
             <img class="manual-about__icon" src="../icons/manuals_about/author.svg" alt="Автор" width="20" height="20"/>
-            <span class="manual-about__text"><a class="link link--hidden" href="https://t.me/iannsgirdye">iannsgirdye</a></span>
+            <span class="manual-about__text">
+              <a class="link link--hidden" href="https://t.me/iannsgirdye" target="_blank">iannsgirdye</a>
+            </span>
           </div>
         </div>
         <div class="table-wrapper">
