Update authors of manuals

--- a/manuals/union.html
+++ b/manuals/union.html
@@ -55,6 +55,7 @@
           <div class="manual-about__element">
             <img class="manual-about__icon" src="../icons/manuals_about/author.svg" alt="Автор" width="20" height="20"/>
             <span class="manual-about__text">
+              <a class="link link--hidden" href="https://t.me/pb8mai" target="_blank">ПБ8</a>,
               <a class="link link--hidden" href="https://t.me/iannsgirdye" target="_blank">iannsgirdye</a>
             </span>
           </div>
