Connect new favicon correctly

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta property="twitter:description" content="Сборник цифровых сервисов и информационных ресурсов организаций МАИ, материалов для самообразования и статей на различные темы"/>
     <meta property="twitter:image" content="https://mai-library.ru/open-graph.jpg"/>
     <title>mai_library — сборник материалов для маёвца</title>
-    <link rel="shortcut icon" href="./icons/favicon.ico" type="image/x-icon"/>
+    <link rel="icon" href="https://mai-library.ru/favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="./normalize.css"/>
     <link rel="stylesheet" href="./styles.css"/>
   </head>
