--- a/organizations.html
+++ b/organizations.html
@@ -9,7 +9,7 @@
     />
     <meta name="author" content="iannsgirdye"/>
     <title>Организации | mai_library — сборник материалов для маёвца</title>
-    <link rel="shortcut icon" href="./icons/favicon.ico" type="image/x-icon"/>
+    <link rel="icon" href="https://mai-library.ru/favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="./normalize.css"/>
     <link rel="stylesheet" href="./styles.css"/>
   </head>
