Pin header on the top of screen

--- a/self-education.html
+++ b/self-education.html
@@ -15,28 +15,30 @@
   </head>
   <body>
     <header class="header">
-      <a class="header__logo" href="./index.html">
-        <span class="header__logo-title">mai_library</span>
-        <span class="header__logo-description">Сборник материалов для маёвца</span>
-      </a>
-      <nav class="header__menu">
-        <input class="header__burger-checkbox" id="burger-checkbox" type="checkbox"/>
-        <label class="header__burger-button" for="burger-checkbox"></label>
-        <ul class="header__menu-list">
-          <li class="header__menu-item">
-            <a class="header__menu-link" href="./services.html">Сервисы</a>
-          </li>
-          <li class="header__menu-item">
-            <a class="header__menu-link" href="./organizations.html">Организации</a>
-          </li>
-          <li class="header__menu-item">
-            <a class="header__menu-link" href="./manuals.html">Справочник</a>
-          </li>
-          <li class="header__menu-item">
-            <a class="header__menu-link header__menu-link--active" href="./self-education.html">Самообразование</a>
-          </li>
-        </ul>
-      </nav>
+      <div class="header__wrapper">
+        <a class="header__logo" href="./index.html">
+          <span class="header__logo-title">mai_library</span>
+          <span class="header__logo-description">Сборник материалов для маёвца</span>
+        </a>
+        <nav class="header__menu">
+          <input class="header__burger-checkbox" id="burger-checkbox" type="checkbox"/>
+          <label class="header__burger-button" for="burger-checkbox"></label>
+          <ul class="header__menu-list">
+            <li class="header__menu-item">
+              <a class="header__menu-link" href="./services.html">Сервисы</a>
+            </li>
+            <li class="header__menu-item">
+              <a class="header__menu-link" href="./organizations.html">Организации</a>
+            </li>
+            <li class="header__menu-item">
+              <a class="header__menu-link" href="./manuals.html">Справочник</a>
+            </li>
+            <li class="header__menu-item">
+              <a class="header__menu-link header__menu-link--active" href="./self-education.html">Самообразование</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
       <section class="about">
