--- a/manuals.html
+++ b/manuals.html
@@ -9,7 +9,12 @@
     />
     <meta name="author" content="iannsgirdye"/>
     <title>Справочник | mai_library — сборник материалов для маёвца</title>
-    <link rel="shortcut icon" href="./icons/favicon.ico" type="image/x-icon"/>
+    <link rel="icon" href="https://mai-library.ru/favicon.ico" type="image/x-icon"/>
+    <link rel="icon" href="/android-chrome-192x192.png" type="image/png" sizes="192x192"/>
+    <link rel="icon" href="/android-chrome-512x512.png" type="image/png" sizes="512x512"/>
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180"/>
+    <link rel="icon" href="/favicon-16x16.png" type="image/png" sizes="16x16"/>
+    <link rel="icon" href="/favicon-32x32.png" type="image/png" sizes="32x32"/>
     <link rel="stylesheet" href="./normalize.css"/>
     <link rel="stylesheet" href="./styles.css"/>
   </head>
