Add lost <i> for additional text in "money" manual

--- a/manuals/money.html
+++ b/manuals/money.html
@@ -147,7 +147,7 @@
                   </tr>
                   <tr>
                     <td>От компаний</td>
-                    <td>Например, от "Т-Банка" (подробно на сайтах компаний)</td>
+                    <td>Например, от "Т-Банка" <i>(подробно на сайтах компаний)</i></td>
                   </tr>
                 </tbody>
               </table>
@@ -204,7 +204,7 @@
                     <li>Подписаться на социальные сети Профбюро Института и следить за постами.</li>
                     <li>Увидеть замечательный пост о том, что начался приём документов на материальную поддержку.</li>
                     <li>Принести в Профбюро Института заявление, корректно заполненное синей ручкой, и чёткие копии документов.</li>
-                    <li>Радоваться жизни и ждать, пока выйдет приказ, в следующем месяце (относительно выхода приказа) в день выплаты стипендии Вам придёт материальная поддержка.</li>
+                    <li>Радоваться жизни и ждать, пока выйдет приказ, в следующем месяце <i>(относительно выхода приказа)</i> в день выплаты стипендии Вам придёт материальная поддержка.</li>
                   </ol>
                 </li>
                 <li><b>Членам Профсоюза</a>:</b> обратиться к сотрудникам социальной комиссии.</li>
