--- a/manuals/exits.html
+++ b/manuals/exits.html
@@ -104,7 +104,7 @@
                 <ul>
                   <li>блокируется пропуск;</li>
                   <li>учёба прекращается;</li>
-                  <li>деньги за обучение не списываются (если студент на платном обучении).</li>
+                  <li>деньги за обучение не списываются <i>(если студент на платном обучении)</i>.</li>
                 </ul>
               </li>
               <li>
