Add lost <i> for additional text in "union" manual

--- a/manuals/union.html
+++ b/manuals/union.html
@@ -94,7 +94,7 @@
               <li>
                 <b>Продление Профсоюзного билета.</b>
                 Необходимо уплачивать взносы в размере 3% от стипендии, если ты её получаешь
-                (сумма высчитывается и снимается автоматически), или, если не получаешь,
+                <i>(сумма высчитывается и снимается автоматически)</i>, или, если не получаешь,
                 в размере 8 рублей в месяц или 48 рублей за семестр.
               </li>
               <li>
@@ -113,10 +113,14 @@
               <li>Получить у члена Профбюро бланк заявления о вступлении в Профсоюз.</li>
               <li>Заполнить бланк заявления о вступлении в Профсоюз.</li>
               <li>Сдать члену Профбюро бланк заявления о вступлении в Профсоюз.</li>
-              <li>Оплатить профвзнос (8 рублей для получающих и 48 рублей для не получающих стипендию).</li>
+              <li>Оплатить профвзнос <i>(8 рублей для получающих и 48 рублей для не получающих стипендию)</i>.</li>
               <li>Получить у члена Профбюро ссылку на гугл-форму.</li>
-              <li>Заполнить-гугл форму (нужна для учёта членов Профсоюза и ведения статистики).</li>
-              <li>Получить электронный профсоюзный билет (его производство занимает некоторое время, поэтому как только карточка окажется у членов Профбюро, они свяжутся с Вами).</li>
+              <li>Заполнить-гугл форму <i>(нужна для учёта членов Профсоюза и ведения статистики)</i>.</li>
+              <li>
+                Получить электронный профсоюзный билет
+                <i>(его производство занимает некоторое время, поэтому как только
+                  карточка окажется у членов Профбюро, они свяжутся с Вами)</i>.
+                </li>
             </ol>
             <p>Студент считается членом Профсоюза с момента написания заявления о вступлении в Профсоюз и оплаты профвзноса.</p>
           </div>
