--- a/organizations.html
+++ b/organizations.html
@@ -647,6 +647,17 @@
                 </a>
               </li>
               <li class="catalog-group__item">
+                <a class="card" href="http://kaf801.ru" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Кафедра 801</h4>
+                    <span class="card__description">Физика</span>
+                  </div>
+                </a>
+              </li>
+              <li class="catalog-group__item">
                 <a class="card card--telegram" href="https://t.me/kaf802mai" target="_blank">
                   <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
