Add description for "t.me/kaf802mai"

--- a/organizations.html
+++ b/organizations.html
@@ -665,6 +665,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Кафедра 802</h4>
+                    <span class="card__description">Мехатроника и теоретическая механика</span>
                   </div>
                 </a>
               </li>
