--- a/organizations.html
+++ b/organizations.html
@@ -676,6 +676,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Кафедра 804</h4>
+                    <span class="card__description">Теория вероятностей и компьютерное моделирование</span>
                   </div>
                 </a>
               </li>
