Add description for "dep805.ru"

--- a/organizations.html
+++ b/organizations.html
@@ -687,6 +687,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Кафедра 805</h4>
+                    <span class="card__description">Математическая кибернетика</span>
                   </div>
                 </a>
               </li>
