Add "vk.com/mai_chgk" to "organizations" catalog

--- a/organizations.html
+++ b/organizations.html
@@ -424,6 +424,16 @@
                   </div>
                 </a>
               </li>
+              <li class="catalog-group__item">
+                <a class="card card--vk" href="https://vk.com/mai_chgk" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/vk.svg" alt="VK" title="VK" width="40" height="40"/>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Клуб интеллектуальных игр</h4>
+                  </div>
+                </a>
+              </li>
             </ul>
           </article>
           <article class="catalog-group" id="catalog-institute-1">
