Add description for "t.me/mai_profkom"

--- a/organizations.html
+++ b/organizations.html
@@ -219,6 +219,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Профком обучающихся</h4>
+                    <span class="card__description">Профсоюзный комитет студентов</span>
                   </div>
                 </a>
               </li>
