Update title for "maiprof.ru"

--- a/organizations.html
+++ b/organizations.html
@@ -229,7 +229,7 @@
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
-                    <h4 class="card__title">Профсоюз работников</h4>
+                    <h4 class="card__title">Профком работников</h4>
                   </div>
                 </a>
               </li>  
