Add description for "maiprof.ru"

--- a/organizations.html
+++ b/organizations.html
@@ -230,6 +230,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Профком работников</h4>
+                    <span class="card__description">Профсоюзный комитет сотрудников</span>
                   </div>
                 </a>
               </li>  
