Add "t.me/propeller_mai" to "organizations" catalog

--- a/organizations.html
+++ b/organizations.html
@@ -233,7 +233,19 @@
                     <span class="card__description">Профсоюзный комитет сотрудников</span>
                   </div>
                 </a>
-              </li>  
+              </li>
+              <li class="catalog-group__item">
+                <a class="card card--telegram" href="https://t.me/propeller_mai" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
+                    <span class="card__type">канал</span>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Пропеллер</h4>
+                    <span class="card__description">Студенческое СМИ</span>
+                  </div>
+                </a>
+              </li>              
             </ul>
           </article>
           <article class="catalog-group" id="catalog-communication">
