Add description for "kafedra304.ru"

--- a/organizations.html
+++ b/organizations.html
@@ -525,6 +525,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Кафедра 304</h4>
+                    <span class="card__description">Вычислительные машины, системы и сети</span>
                   </div>
                 </a>
               </li>
