--- a/organizations.html
+++ b/organizations.html
@@ -518,10 +518,9 @@
                 </a>
               </li>
               <li class="catalog-group__item">
-                <a class="card card--telegram" href="https://t.me/kafedra304" target="_blank">
+                <a class="card card" href="https://kafedra304.ru" target="_blank">
                   <div class="card__icon-wrapper">
-                    <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
-                    <span class="card__type">канал</span>
+                    <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Кафедра 304</h4>
