Add description for "t.me/info307"

--- a/organizations.html
+++ b/organizations.html
@@ -536,6 +536,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Кафедра 307</h4>
+                    <span class="card__description">Цифровые технологии и информационные системы</span>
                   </div>
                 </a>
               </li>
