--- a/organizations.html
+++ b/organizations.html
@@ -219,6 +219,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Профком обучающихся</h4>
+                    <span class="card__description">Профсоюзный комитет студентов</span>
                   </div>
                 </a>
               </li>
@@ -228,10 +229,23 @@
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
-                    <h4 class="card__title">Профсоюз работников</h4>
+                    <h4 class="card__title">Профком работников</h4>
+                    <span class="card__description">Профсоюзный комитет сотрудников</span>
                   </div>
                 </a>
-              </li>  
+              </li>
+              <li class="catalog-group__item">
+                <a class="card card--telegram" href="https://t.me/propeller_mai" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
+                    <span class="card__type">канал</span>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Пропеллер</h4>
+                    <span class="card__description">Студенческое СМИ</span>
+                  </div>
+                </a>
+              </li>              
             </ul>
           </article>
           <article class="catalog-group" id="catalog-communication">
@@ -424,6 +438,16 @@
                   </div>
                 </a>
               </li>
+              <li class="catalog-group__item">
+                <a class="card card--vk" href="https://vk.com/mai_chgk" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/vk.svg" alt="VK" title="VK" width="40" height="40"/>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Клуб интеллектуальных игр</h4>
+                  </div>
+                </a>
+              </li>
             </ul>
           </article>
           <article class="catalog-group" id="catalog-institute-1">
@@ -494,13 +518,13 @@
                 </a>
               </li>
               <li class="catalog-group__item">
-                <a class="card card--telegram" href="https://t.me/kafedra304" target="_blank">
+                <a class="card card" href="https://kafedra304.ru" target="_blank">
                   <div class="card__icon-wrapper">
-                    <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
-                    <span class="card__type">канал</span>
+                    <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Кафедра 304</h4>
+                    <span class="card__description">Вычислительные машины, системы и сети</span>
                   </div>
                 </a>
               </li>
@@ -512,6 +536,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Кафедра 307</h4>
+                    <span class="card__description">Цифровые технологии и информационные системы</span>
                   </div>
                 </a>
               </li>
@@ -647,6 +672,17 @@
                 </a>
               </li>
               <li class="catalog-group__item">
+                <a class="card" href="http://kaf801.ru" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">Кафедра 801</h4>
+                    <span class="card__description">Физика</span>
+                  </div>
+                </a>
+              </li>
+              <li class="catalog-group__item">
                 <a class="card card--telegram" href="https://t.me/kaf802mai" target="_blank">
                   <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/telegram.svg" alt="Telegram" title="Telegram" width="40" height="40"/>
@@ -654,6 +690,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Кафедра 802</h4>
+                    <span class="card__description">Мехатроника и теоретическая механика</span>
                   </div>
                 </a>
               </li>
@@ -664,6 +701,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Кафедра 804</h4>
+                    <span class="card__description">Теория вероятностей и компьютерное моделирование</span>
                   </div>
                 </a>
               </li>
@@ -674,6 +712,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Кафедра 805</h4>
+                    <span class="card__description">Математическая кибернетика</span>
                   </div>
                 </a>
               </li>
