Move names of institutes to descriptions of links

--- a/organizations.html
+++ b/organizations.html
@@ -451,7 +451,7 @@
             </ul>
           </article>
           <article class="catalog-group" id="catalog-institute-1">
-            <h3 class="catalog-group__title">Институт №1 "Авиационная техника"</h3>
+            <h3 class="catalog-group__title">Институт №1</h3>
             <ul class="catalog-group__list">
               <li class="catalog-group__item">
                 <a class="card card--telegram" href="https://t.me/avia_mai" target="_blank">
@@ -461,6 +461,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Институт</h4>
+                    <span class="card__description">"Авиационная техника"</span>
                   </div>
                 </a>
               </li>
@@ -478,7 +479,7 @@
             </ul>
           </article>
           <article class="catalog-group" id="catalog-institute-2">
-            <h3 class="catalog-group__title">Институт №2 "Авиационные, ракетные двигатели и энергетические установки"</h3>
+            <h3 class="catalog-group__title">Институт №2</h3>
             <ul class="catalog-group__list">
               <li class="catalog-group__item">
                 <a class="card card--telegram" href="https://t.me/institute2mai" target="_blank">
@@ -488,6 +489,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Институт</h4>
+                    <span class="card__description">"Авиационные, ракетные двигатели и энергетические установки"</span>
                   </div>
                 </a>
               </li>
@@ -505,7 +507,7 @@
             </ul>
           </article>
           <article class="catalog-group" id="catalog-institute-3">
-            <h3 class="catalog-group__title">Институт №3 "Системы управления, информатика и электроэнергетика"</h3>
+            <h3 class="catalog-group__title">Институт №3</h3>
             <ul class="catalog-group__list">
               <li class="catalog-group__item">
                 <a class="card card--vk" href="https://vk.com/club2240" target="_blank">
@@ -514,6 +516,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Институт</h4>
+                    <span class="card__description">"Системы управления, информатика и электроэнергетика"</span>
                   </div>
                 </a>
               </li>
@@ -554,7 +557,7 @@
             </ul>
           </article>
           <article class="catalog-group" id="catalog-institute-4">
-            <h3 class="catalog-group__title">Институт №4 "Радиоэлектроника, инфокоммуникации и информационная безопасность"</h3>
+            <h3 class="catalog-group__title">Институт №4</h3>
             <ul class="catalog-group__list">
               <li class="catalog-group__item">
                 <a class="card card--vk" href="https://vk.com/frela_mai" target="_blank">
@@ -563,6 +566,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Институт</h4>
+                    <span class="card__description">"Радиоэлектроника, инфокоммуникации и информационная безопасность"</span>
                   </div>
                 </a>
               </li>
@@ -579,7 +583,7 @@
             </ul>
           </article>
           <article class="catalog-group" id="catalog-institute-5">
-            <h3 class="catalog-group__title">Институт №5 "Экономика и менеджмент высокотехнологичной индустрии"</h3>
+            <h3 class="catalog-group__title">Институт №5</h3>
             <ul class="catalog-group__list">
               <li class="catalog-group__item">
                 <a class="card card--telegram" href="https://t.me/inst5mai" target="_blank">
@@ -589,6 +593,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Институт</h4>
+                    <span class="card__description">"Экономика и менеджмент высокотехнологичной индустрии"</span>
                   </div>
                 </a>
               </li>
@@ -606,7 +611,7 @@
             </ul>
           </article>
           <article class="catalog-group" id="catalog-institute-6">
-            <h3 class="catalog-group__title">Институт №6 "Аэрокосмический"</h3>
+            <h3 class="catalog-group__title">Институт №6</h3>
             <ul class="catalog-group__list">
               <li class="catalog-group__item">
                 <a class="card card--vk" href="https://vk.com/aerocosmos_mai" target="_blank">
@@ -615,6 +620,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Институт</h4>
+                    <span class="card__description">"Аэрокосмический"</span>
                   </div>
                 </a>
               </li>
@@ -631,7 +637,7 @@
             </ul>
           </article>
           <article class="catalog-group" id="catalog-institute-7">
-            <h3 class="catalog-group__title">Институт №7 "Робототехнические и интеллектуальные системы"</h3>
+            <h3 class="catalog-group__title">Институт №7</h3>
             <ul class="catalog-group__list">
               <li class="catalog-group__item">
                 <a class="card card--telegram" href="https://t.me/institute7mai" target="_blank">
@@ -641,6 +647,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Институт</h4>
+                    <span class="card__description">"Робототехнические и интеллектуальные системы"</span>
                   </div>
                 </a>
               </li>
@@ -658,7 +665,7 @@
             </ul>
           </article>
           <article class="catalog-group" id="catalog-institute-8">
-            <h3 class="catalog-group__title">Институт №8 "Компьютерные науки и прикладная математика"</h3>
+            <h3 class="catalog-group__title">Институт №8</h3>
             <ul class="catalog-group__list">
               <li class="catalog-group__item">
                 <a class="card card--telegram" href="https://t.me/itcmai" target="_blank">
@@ -668,6 +675,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">IT-Центр</h4>
+                    <span class="card__description">Анонсы всех мероприятий в сфере IT и бизнеса</span>
                   </div>
                 </a>
               </li>
@@ -730,7 +738,7 @@
             </ul>
           </article>
           <article class="catalog-group" id="catalog-institute-9">
-            <h3 class="catalog-group__title">Институт №9 "Общеинженерная подготовка"</h3>
+            <h3 class="catalog-group__title">Институт №9</h3>
             <ul class="catalog-group__list">
               <li class="catalog-group__item">
                 <a class="card card--telegram" href="https://t.me/Inst9MAI" target="_blank">
@@ -740,6 +748,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Институт</h4>
+                    <span class="card__description">"Общеинженерная подготовка"</span>
                   </div>
                 </a>
               </li>
@@ -756,7 +765,7 @@
             </ul>
           </article>
           <article class="catalog-group" id="catalog-institute-10">
-            <h3 class="catalog-group__title">Институт №10 "Иностранные языки"</h3>
+            <h3 class="catalog-group__title">Институт №10</h3>
             <ul class="catalog-group__list">
               <li class="catalog-group__item">
                 <a class="card card--telegram" href="https://t.me/MAIx10" target="_blank">
@@ -766,6 +775,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Институт</h4>
+                    <span class="card__description">"Иностранные языки"</span>
                   </div>
                 </a>
               </li>
@@ -782,7 +792,7 @@
             </ul>
           </article>
           <article class="catalog-group" id="catalog-institute-11">
-            <h3 class="catalog-group__title">Институт №11 "Материаловедение и технологии материалов"</h3>
+            <h3 class="catalog-group__title">Институт №11</h3>
             <ul class="catalog-group__list">
               <li class="catalog-group__item">
                 <a class="card card--vk" href="https://vk.com/institut_mtm" target="_blank">
@@ -791,13 +801,14 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Профбюро</h4>
+                    <span class="card__description">Профбюро института "Материаловедение и технологии материалов"</span>
                   </div>
                 </a>
               </li>
             </ul>
           </article>
           <article class="catalog-group" id="catalog-institute-12">
-            <h3 class="catalog-group__title">Институт №12 "Аэрокосмические наукоёмкие технологии и производства"</h3>
+            <h3 class="catalog-group__title">Институт №12</h3>
             <ul class="catalog-group__list">
               <li class="catalog-group__item">
                 <a class="card card--vk" href="https://vk.com/mai_pb_12" target="_blank">
@@ -806,13 +817,14 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Институт</h4>
+                    <span class="card__description">"Аэрокосмические наукоёмкие технологии и производства"</span>
                   </div>
                 </a>
               </li>
             </ul>
           </article>
           <article class="catalog-group" id="catalog-institute-13">
-            <h3 class="catalog-group__title">Военный учебный центр при МАИ</h3>
+            <h3 class="catalog-group__title">ВУЦ при МАИ</h3>
             <ul class="catalog-group__list">
               <li class="catalog-group__item">
                 <a class="card" href="https://vuc-mai.ru" target="_blank">
@@ -821,6 +833,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">ВУЦ при МАИ</h4>
+                    <span class="card__description">Военный учебный центр при МАИ</span>
                   </div>
                 </a>
               </li>
@@ -832,13 +845,14 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">ВУЦ при МАИ</h4>
+                    <span class="card__description">Военный учебный центр при МАИ</span>
                   </div>
                 </a>
               </li>
             </ul>
           </article>
           <article class="catalog-group" id="catalog-institute-14">
-            <h3 class="catalog-group__title">Институт №14 "Передовая инженерная школа"</h3>
+            <h3 class="catalog-group__title">Институт №14</h3>
             <ul class="catalog-group__list">
               <li class="catalog-group__item">
                 <a class="card card--telegram" href="https://t.me/profburopish14" target="_blank">
@@ -848,6 +862,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Профбюро</h4>
+                    <span class="card__description">Профбюро института "Передовая инженерная школа"</span>
                   </div>
                 </a>
               </li>
