Add quotation marks for names of departments

--- a/organizations.html
+++ b/organizations.html
@@ -527,7 +527,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Кафедра 304</h4>
-                    <span class="card__description">Вычислительные машины, системы и сети</span>
+                    <span class="card__description">"Вычислительные машины, системы и сети"</span>
                   </div>
                 </a>
               </li>
@@ -539,7 +539,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Кафедра 307</h4>
-                    <span class="card__description">Цифровые технологии и информационные системы</span>
+                    <span class="card__description">"Цифровые технологии и информационные системы"</span>
                   </div>
                 </a>
               </li>
@@ -686,7 +686,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Кафедра 801</h4>
-                    <span class="card__description">Физика</span>
+                    <span class="card__description">"Физика"</span>
                   </div>
                 </a>
               </li>
@@ -698,7 +698,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Кафедра 802</h4>
-                    <span class="card__description">Мехатроника и теоретическая механика</span>
+                    <span class="card__description">"Мехатроника и теоретическая механика"</span>
                   </div>
                 </a>
               </li>
@@ -709,7 +709,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Кафедра 804</h4>
-                    <span class="card__description">Теория вероятностей и компьютерное моделирование</span>
+                    <span class="card__description">"Теория вероятностей и компьютерное моделирование"</span>
                   </div>
                 </a>
               </li>
@@ -720,7 +720,7 @@
                   </div>
                   <div class="card__text-wrapper">
                     <h4 class="card__title">Кафедра 805</h4>
-                    <span class="card__description">Математическая кибернетика</span>
+                    <span class="card__description">"Математическая кибернетика"</span>
                   </div>
                 </a>
               </li>
