Update catalog content

--- a/self-education.html
+++ b/self-education.html
@@ -294,6 +294,17 @@
                 </a>
               </li>
               <li class="catalog-group__item">
+                <a class="card" href="https://www.otpbank.ru/internship" target="_blank">
+                  <div class="card__icon-wrapper">
+                    <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
+                  </div>
+                  <div class="card__text-wrapper">
+                    <h4 class="card__title">OTP Next Generation</h4>
+                    <span class="card__description">Программа стажировок в ОТП Банке</span>
+                  </div>
+                </a>
+              </li>
+              <li class="catalog-group__item">
                 <a class="card" href="https://career.t1.ru" target="_blank">
                   <div class="card__icon-wrapper">
                     <img class="card__icon" src="./icons/links/link.svg" alt="Сайт" title="Сайт" width="40" height="40"/>
